ui/webui/resources/cr_components/searchbox/searchbox.css
/* ... */
/* Side panel searchbox should not have a shadow when dropdown isn't visible */
:host([is-lens-searchbox_]:not([dropdown-is-visible])) {
  --cr-searchbox-shadow: none;
}

:host([show-thumbnail]) {
  --cr-searchbox-thumbnail-icon-offset: 54px;
}

:host([enable-thumbnail-sizing-tweaks_][show-thumbnail]) {
  --cr-searchbox-thumbnail-icon-offset: 48px;
}

:host([searchbox-chrome-refresh-theming][dropdown-is-visible]) {
  --cr-searchbox-shadow: 0 0 12px 4px var(--color-searchbox-shadow)
}

:host([searchbox-chrome-refresh-theming]:not([searchbox-steady-state-shadow]):not([dropdown-is-visible])) {
  --cr-searchbox-shadow: none;
}

:host-context([searchbox-width-behavior_='revert']):host([can-show-secondary-side]:not([dropdown-is-visible])) {
  --cr-searchbox-width: var(--cr-searchbox-min-width);
}

/**
 * Show the secondary side if it can be shown and is currently available to be
 * shown.
 */
:host([can-show-secondary-side][has-secondary-side]) {
  --cr-searchbox-secondary-side-display: block;
}

:host([is-dark]) {
  --cr-searchbox-shadow: 0 2px 6px 0 var(--color-searchbox-shadow);
}

:host([searchbox-voice-search-enabled_]) {
  --cr-searchbox-voice-search-button-width: var(--cr-searchbox-icon-width);
}

:host([searchbox-lens-search-enabled_]) {
  --cr-searchbox-voice-icon-offset: 53px;
}

@media (forced-colors: active) {
  :host {
    border: 1px solid ActiveBorder;
  }
}

:host([dropdown-is-visible]:not([is-lens-searchbox_])) {
  box-shadow: none;
}

:host([match-searchbox]) {
  box-shadow: none;
}

:host([match-searchbox]:not([dropdown-is-visible]):hover) {
  border: 1px solid transparent;
  box-shadow: var(--cr-searchbox-shadow);
}

:host([match-searchbox]:not([is-dark]):not([dropdown-is-visible]):not(:hover)) {
  border: 1px solid var(--color-searchbox-border);
}

#inputWrapper {
  height: 100%;
  position: relative;
}

input {
  background-color: var(--color-searchbox-background);
  border: none;
  border-radius: var(--cr-searchbox-border-radius);
  color: var(--color-searchbox-foreground);
  font-family: inherit;
  font-size: inherit;
  height: 100%;
  outline: none;
  /* Always include offset and margin padding, even if the voice search button
   * is not being shown. */
  padding-inline-end: calc(var(--cr-searchbox-voice-icon-offset) + var(--cr-searchbox-voice-search-button-width) + var(--cr-searchbox-inner-icon-margin));
  padding-inline-start: calc(52px + var(--cr-searchbox-thumbnail-icon-offset, 0px));
  position: relative;
  width: 100%;
}

:host-context([dir='rtl']) input[dir='ltr'],
:host-context([dir='ltr']) input[dir='rtl'] {
  padding-inline-end: calc(52px + var(--cr-searchbox-thumbnail-icon-offset, 0px));
  padding-inline-start: calc(var(--cr-searchbox-voice-icon-offset) + var(--cr-searchbox-voice-search-button-width) + var(--cr-searchbox-inner-icon-margin));
}

:host-context([is-back-arrow-visible]) input {
  padding-inline-start: calc(22px + var(--cr-searchbox-thumbnail-icon-offset, 0px));
}

:host([searchbox-chrome-refresh-theming]) input::selection {
  background-color: var(--color-searchbox-selection-background);
  color: var(--color-searchbox-selection-foreground)
}

input::-webkit-search-decoration,
input::-webkit-search-results-button,
input::-webkit-search-results-decoration {
  display: none;
}

/* Visually hide the cancel button but do not set display to none or
 * visibility to hidden as this causes issues with NVDA not reading out the
 * full value of the searchbox input as the user selects suggestion matches.
 * See crbug.com/1312442 for more context. */
input::-webkit-search-cancel-button {
  appearance: none;
  margin: 0;
}

input::placeholder {
  color: var(--color-searchbox-placeholder);
  opacity: var(--placeholder-opacity);
}

input:focus::placeholder {
  /* Visually hide the placeholder on focus. The placeholder will still be
   * read by screen readers. Using color: transparent or other ways of
   * visually hiding the placeholder does not work well with 'Find in page...'
   * as the placeholder text can get highlighted. */
  visibility: hidden;
}

:host([is-lens-searchbox_]) input:focus::placeholder{
  visibility: visible;
}

input:focus,
:host([dropdown-is-visible]) input {
  background-color: var(--color-searchbox-results-background);
}

/* Search bubble realbox input color shouldn't change when dropdown is
 * visible. */
:host([is-lens-searchbox_][dropdown-is-visible]) input {
  background-color: var(--color-bubble-searchbox-results-input-background, --color-searchbox-results-background);
}

:host([is-lens-searchbox_]:not([dropdown-is-visible])) input:focus {
  background-color: var(--color-searchbox-background);
}

:host([searchbox-chrome-refresh-theming]:not([searchbox-steady-state-shadow]):not([dropdown-is-visible])) input {
  background-color: var(--color-searchbox-background);
}

:host([searchbox-chrome-refresh-theming]:not([searchbox-steady-state-shadow]):not([dropdown-is-visible])) input:hover,
input:hover {
  background-color: var(--color-searchbox-background-hovered);
}

cr-searchbox-icon {
  height: 100%;
  left: var(--cr-searchbox-icon-left-position);
  position: absolute;
  top: var(--cr-searchbox-icon-top-position);
  pointer-events: none;
}

:host-context([is-back-arrow-visible]) #icon {
  display: none;
}

:host-context([dir='rtl']) cr-searchbox-icon {
  left: unset;
  right: 12px;
}

.searchbox-icon-button {
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 21px 21px;
  border: none;
  border-radius: 2px;
  cursor: pointer;
  height: 100%;
  outline: none;
  padding: 0;
  pointer-events: auto;
  position: absolute;
  right: 16px;
  width: var(--cr-searchbox-icon-width);
}

:host([searchbox-chrome-refresh-theming]) .searchbox-icon-button {
  position: static;
}
/* ... */

