[searchbox] Fix issue of not enough truncating in realbox input
* Issue: when in dropdown mode, the text does not fill all empty space
since the lens and voice buttons disappear in dropdown mode. In tall
realbox mode, the text does not fill all empty space up to the AI search
button since the lens/voice buttons have been moved down.
* Fix: added rules for tall mode and during dropdown w/compose button
enabled - text input will end/truncate where the lens usually is (lens'
location when compose button exists)
* all other cases, like voice only, or no compose box
are the same (stops to left of voice based on voice offset, etc.)
* added similar logic to previous non-dropdown
logic for if input is opposite direction as host's reading direction

Verification:

before: normal mode and compose, open dropdown (improper truncation)
screen/8Bi66UDRZmh2QYC

before: normal mode and compose, closed dropdown (proper truncation)
screen/84CocMAq4M2Nx7p

after: tall mode open dropdown (proper truncation)
screen/poouWQHaQdkqGhc

after: tall mode no dropdown (proper truncation) screen/64uKrotzNPDE4Nt

after: normal mode and no compose, closed dropdown (proper truncation)
screen/4yxTHQxaYhrAvnk

after: normal mode and no compose, open dropdown (proper truncation)
screen/5rZwnzjtNNjJMgw

after: normal mode and compose, open dropdown (proper truncation)
screen/Ba24tyxuUEvhdhw

after: normal mode and compose, closed dropdown (proper truncation)
screen/AzKNeLsrGyXkDE6

(cherry picked from commit 441acf2aab61165fb4f9b9e86cc0fcbad5e04657)

Bug: 448181926, 454000454
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7009309
Commit-Queue: James Leung <jamesleung@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1527176}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7076716
Commit-Queue: Roman Arora <romanarora@chromium.org>
Cr-Commit-Position: refs/branch-heads/7444@{#2266}
Cr-Branched-From: 29907d3c18078029695f458b42fb8e6fda3e493d-refs/hea

--- a/ui/webui/resources/cr_components/searchbox/searchbox.css
+++ b/ui/webui/resources/cr_components/searchbox/searchbox.css
@@ -100,6 +100,12 @@
 }
 
 input {
+  --cr-searchbox-input-start-padding: calc(52px +
+      var(--cr-searchbox-thumbnail-icon-offset, 0px));
+  --cr-searchbox-input-trailing-padding:
+      calc(var(--cr-searchbox-voice-icon-offset)
+      + var(--cr-searchbox-voice-search-button-width)
+      + var(--cr-searchbox-inner-icon-margin));
   background-color: var(--color-searchbox-background);
   border: none;
   border-radius: var(--cr-searchbox-border-radius);
@@ -108,18 +114,23 @@ input {
   font-size: inherit;
   height: 100%;
   outline: none;
-  /* Always include offset and margin padding, even if the voice search button
-   * is not being shown. */
-  padding-inline-end: calc(var(--cr-searchbox-voice-icon-offset) + var(--cr-searchbox-voice-search-button-width) + var(--cr-searchbox-inner-icon-margin));
-  padding-inline-start: calc(52px + var(--cr-searchbox-thumbnail-icon-offset, 0px));
+  padding-inline-end: var(--cr-searchbox-input-trailing-padding);
+  padding-inline-start: var(--cr-searchbox-input-start-padding);
   position: relative;
   width: 100%;
 }
 
 :host-context([dir='rtl']) input[dir='ltr'],
 :host-context([dir='ltr']) input[dir='rtl'] {
-  padding-inline-end: calc(52px + var(--cr-searchbox-thumbnail-icon-offset, 0px));
-  padding-inline-start: calc(var(--cr-searchbox-voice-icon-offset) + var(--cr-searchbox-voice-search-button-width) + var(--cr-searchbox-inner-icon-margin));
+  padding-inline-end: var(--cr-searchbox-input-start-padding);
+  padding-inline-start: var(--cr-searchbox-input-trailing-padding);
+}
+
+:host([compose-button-enabled][dropdown-is-visible]) input,
+:host([realbox-layout-mode='Tall']) input {
+  --cr-searchbox-input-trailing-padding: calc(12px
+      + var(--cr-compose-button-width)
+      + var(--cr-searchbox-icon-spacing));
 }
 
 :host-context([is-back-arrow-visible]) input {
